--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: React
+  name: react
   labels:
-    app: React
+    app: react
 spec:
   type: NodePort
   ports:
@@ -17,12 +17,12 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: React
+  name: react
   labels:
-    app: React
+    app: react
 spec:
   containers:
-  - name: React
+  - name: react
     image: druce080/flaskcolor
     ports:
     - containerPort: 3000
